--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,22 @@
     android:layout_height="match_parent"
     tools:context="com.example.kevin.fitbuddy.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/imageView"
 
+        android:adjustViewBounds="true"
+        android:background="@color/colorAccent"
+        android:scaleType="center"
+        app:srcCompat="@color/colorAccent"
+        tools:layout_editor_absoluteX="47dp"
+        tools:layout_editor_absoluteY="35dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="208dp"
+        android:layout_height="119dp"
+        android:text="TextView"
+        android:textSize="32dp"
+        tools:layout_editor_absoluteX="71dp"
+        tools:layout_editor_absoluteY="103dp" />
 </android.support.constraint.ConstraintLayout>
